# streams

./: ChangeLog.md  streams.cabal
bench/: Main.hs
src/Streams/: Examples.hs  Fold.hs  Unfold.hs
src/Streams/Fold/: Examples.hs
src/Streams/Unfold/: Examples.hs
test/: Main.hs
