name:                streams
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Streams.Examples
    Streams.Fold
    Streams.Fold.Examples
    Streams.Unfold
    Streams.Unfold.Examples

  -- other-modules:
  -- other-extensions:

  build-depends:       base >=4.9 && <4.10

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:
    base,
    streams,
    QuickCheck
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:
    base,
    criterion,
    deepseq,
    streams
  ghc-options:         -Wall
